<resources>
    <string name="app_name">HELEN</string>
    <string name="title_activity_pdfviewer">PDFViewer</string>
    <string name="speech_input_phrase">Say the Phrase</string>
    <string name="speech_input_Rate">Say the Rate</string>
    <string name="speech_input_Review">Say the Review</string>

    <string name="stt_not_supported_message">Your Device Doesn\'t Support Speech to Text</string>
    <string name="pref_speech_rate">Speech Rate</string>
    <string name="voiceButton">Ask Helen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_label">Search bar</string>
    <string name="settings_description">Search for books..authors..</string>
    <!-- Details Activity Textviews-->
    <string name="description">Book Description</string>
    <string name="goodreads_rating">Rating by Goodreads</string>
    <string name="helen_ratings">Rating by Helen Users</string>
    <string name="user_ratings">Add your Rating Here</string>
    <string name="listview_title">Book Reviews</string>
    <string name="download">Download</string>
    <string name="add_review">Add A Review</string>
    <string name="author_about">About Author</string>
    <!-- Search Activity Textviews -->
    <string name="hint">Enter Book Name or Author name</string>
    <string name="seachRdBtn">Search Books</string>
    <string name="similarRdBtn">Find Similar Books</string>
    <string name="titleRdBtn">Search By Title</string>
    <string name="authorRdBtn">Search By Author</string>
    <!-- App URLs -->
    <string name="login">https://helen-final-gp.herokuapp.com/user/login/</string>
    <string name="signUp">https://helen-final-gp.herokuapp.com/user/register/</string>
    <string name="book_suggestion">https://helen-final-gp.herokuapp.com/book/suggestions/?book_title=</string>
    <string name="recommend_by_book">https://helen-final-gp.herokuapp.com/book/recommend/book/?book_title=</string>
    <string name="recommend_by_author">https://helen-final-gp.herokuapp.com/book/recommend/author/?author=</string>
    <string name="search_by_book">https://helen-final-gp.herokuapp.com/book/search/book/?book_title=</string>
    <string name="search_by_author">https://helen-final-gp.herokuapp.com/book/search/author/?author=</string>
    <string name="search_book_details">https://helen-final-gp.herokuapp.com/book/search/detail/?book_title=</string>
    <string name="book_download">https://helen-final-gp.herokuapp.com/book/book_download/?book_title=</string>
    <string name="create_review">https://helen-final-gp.herokuapp.com/book/comments/create/</string>
    <string name="create_rating">https://helen-final-gp.herokuapp.com/book/ratings/create/</string>
    <string name="search_author_by_name">https://http://helen-final-gp.herokuapp.com/book/author_info/?author=</string>
    <string name="search_author_by_title">https://http://helen-final-gp.herokuapp.com/book/author_info/?book_title=</string>
    <string name="get_user_comments">https://helen-final-gp.herokuapp.com/book/comments_list/?book_title=</string>
    <string name="get_user_ratings">https://helen-final-gp.herokuapp.com/book/ratings_list/?book_title=</string>
    <string name="ask_helen">https://helen-final-gp.herokuapp.com/question/?question=</string>

    <!--User Token-->
    <string name="token">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE1MDAzNzA4MTEsImVtYWlsIjoicmFtYWRhbmFobWVkcmFtYWRhbjkzQHlhaG9vLmNvbSIsInVzZXJfaWQiOjEsInVzZXJuYW1lIjoicmFtYWRhbiIsIm9yaWdfaWF0IjoxNTAwMjg0NDExfQ.Y6qWXIuc2sZs3haZCamSwR5ZVsRzp0M4HUvjxKoSmdM</string>
</resources>
