<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_server"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#444466"
    tools:context="com.example.tarek_ragaeey.helen11.ServerFragment">
    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@mipmap/search_icon"
        android:id="@+id/search_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />
    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_below="@+id/search_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_btn_gp1"
        android:orientation="vertical"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/input_text"
        android:checkedButton="@+id/search_radio_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RadioButton
            android:id="@+id/search_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/seachRdBtn" />
        <RadioButton
            android:id="@+id/similar_radio_btn"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/similarRdBtn" />
    </RadioGroup>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_btn_gp2"
        android:orientation="vertical"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/input_text"
        android:checkedButton="@+id/title_radio_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:id="@+id/title_radio_btn"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/titleRdBtn" />
        <RadioButton
            android:id="@+id/author_radio_btn"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/authorRdBtn" />
    </RadioGroup>
    <Button
        android:id="@+id/ask_helen_search"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/voiceButton"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:layout_below="@+id/radio_btn_gp1"
        android:layout_marginTop="43dp" />
</RelativeLayout>
